Make sure entered email is readable

--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ main {
 
 .signupForm input[type=email] {
     width: 68%;
+    color: #101010;
 }
 
 .signupForm input[type=submit] {
